# CS251

./: README.md  a.out
outLabs/outlab1/: randomNumber.sh
outLabs/outlab1/180050067-180050069-180050086-outlab1/Task1/: isPrimeYear.sh
outLabs/outlab1/solution/Task1/: isPrimeYear.sh
outLabs/outlab1/solution/Task2/: expectedDistance.sh  findTheAnswer.sh  randomNumber.sh
outLabs/outlab1/solution/Task3/: helpGroupTheCsv.sh
outLabs/outlab10/outlab10-Ctrl Alt Defeat/: Beamer.tex
outLabs/outlab2/outlab2-Ctrl Alt Defeat/: references.txt
outLabs/outlab2/solution/: references.txt
outLabs/outlab3/: .~lock.student_database.csv#
outLabs/outlab3/outlab3-Ctrl Alt Defeat/: Q1.py  Q2.py  references.txt
outLabs/outlab3/solution/: Q1.py  Q2.py  Q4.py  Q5.py  references.txt
outLabs/outlab4/: task2.py
outLabs/outlab5/outlab5-Ctrl Alt Defeat/q6/: CMakeLists.txt  rawmake
outLabs/outlab5/outlab5-Ctrl Alt Defeat/q6/myengine/: myengine.cpp  myengine.hpp
outLabs/outlab5/outlab5-Ctrl Alt Defeat/q6/mygame/: CMakeLists.txt
outLabs/outlab7/Ctrl Alt Defeat-outlab7/: hitman.py  insert.py
outLabs/outlab7/outlab7-Ctrl Alt Defeat/: average_balls.py  average_runs.py  create_tables.py  hitman.py  ipl.db  prep_stmt.py  sql_injection.py  win_chance.py
outLabs/outlab8/Ctrl Alt Deafeat-outlab8/: BasicClient.java  BasicServer.java  FetchAndProcess.java  FetchAndProcessFromDisk.java  FetchAndProcessFromNetwork.java  FetchAndProcessFromNetworkFast.java  MultiServer.java
outLabs/outlab8/Ctrl Alt Defeat-outlab8/: BasicClient.java  FetchAndProcessFromNetwork.java  FetchAndProcessFromNetworkFast.java  MultiServer.java  references.txt
outLabs/outlab8/testcases/: input.txt  input0.txt  input1.txt  input_non_zero_delta.txt
(+326 files in other folders)
